<resources>
    <string name="app_name">Cards</string>
    <string name="question_text">Tree</string>
    <string name="answer_text">Árbol</string>
    <string name="answer_button_text">Check answer</string>
    <string name="easy_button_title">Easy</string>
    <string name="doubt_button_title">Doubt</string>
    <string name="difficult_button_title">Difficult</string>
    <string name="cards_left_format">%d cards left</string>
    <string name="quality_count_format">Difficult %d - Doubt %d - Easy %d</string>
    <string name="subtitle_text">Touch to study</string>
    <string name="no_more_cards">No cards left</string>
    <string name="study">STUDY</string>
    <string name="cardlist">List of cards</string>
    <string name="accept_card_edit_button_title">Accept</string>
    <string name="cancel_card_edit_button_title">Cancel</string>
    <string name="card_question_hint">Writte question here</string>
    <string name="card_answer_hint">Writte answer here</string>
    <string name="decks_nav_menu_title">Decks</string>
    <string name="study_nav_menu_title">Study</string>
    <string name="statistics_nav_menu_title">Statistics</string>
    <string name="about_nav_menu_title">About</string>
    <string name="author">Juan Martin</string>
    <string name="app_info">4th year practice</string>
    <string name="asignatura">DADM</string>
    <string name="stats_title">Statistics</string>
    <string name="total_cards">Total of cards:</string>
    <string name="total_decks">Total of decks:</string>
    <string name="settings">Settings</string>
    <string name="decks_header">Decks</string>
    <string name="max_number_cards">Max number of cards</string>
    <string name="board_title">Board</string>
    <string name="board_summary_on">Board summary on</string>
    <string name="board_summary_off">Board summary off</string>
    <string name="title_activity_settings">Board summary off</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="logout_button">Logout</string>
    <string name="error_new_user">Error creating user</string>
    <string name="nombre_mazo_pista">Name of deck</string>
    <string name="no_deck_selected">First select a deck to study</string>
    <string name="delete_button">Delete</string>
    <string name="info_easiness_format">Easiness: %s</string>
    <string name="info_quality_format">Quality: %s</string>
    <string name="mail">email</string>
    <string name="password">password</string>
    <string name="course_name">DADM</string>
    <string name="id_textview">Card ID</string>
    <string name="add_floating_button">Add card button</string>
    <string name="deckId_textview">Deck ID</string>
    <string name="date_text_view">Actual date</string>
    <string name="addDeck_floating_button">Add deck button</string>
    <string name="info_button">+info</string>

</resources>