<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="card"
            type="es.uam.eps.dadm.juanmartin.cards.Card" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/card_edit_id"
            android:text="@string/id_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/card_edit_date"
            android:text="@{card.date}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#049678"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_question_hint"
            android:layout_marginHorizontal="50dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/question_edit_text"
                android:text="@{card.question}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_answer_hint"
            android:layout_marginHorizontal="50dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/answer_edit_text"
                android:text="@{card.answer}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/card_edit_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <Button
                android:id="@+id/accept_card_edit_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#049678"
                android:text="@string/accept_card_edit_button_title" />

            <Button
                android:id="@+id/cancel_card_edit_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF1919"
                android:text="@string/cancel_card_edit_button_title" />
        </com.google.android.material.button.MaterialButtonToggleGroup>
    </LinearLayout>
</layout>