<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="deck" type="es.uam.eps.dadm.juanmartin.cards.Deck"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/cards_edit_card_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/deckId_textview"/>

        <TextView
            android:id="@+id/cards_edit_card_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/date_text_view"
            android:textColor="@color/purple_500"
            android:layout_below="@id/cards_edit_card_id"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/question_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_mazo_pista"
            android:layout_marginHorizontal="50dp"
            android:layout_below="@id/cards_edit_card_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/deck_edit_name_field"
                android:text="@{deck.name}"
                android:layout_width="match_parent"
                android:layout_below="@id/cards_edit_card_date"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/card_edit_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_alignParentBottom="true"
            android:gravity="center">

            <Button
                android:id="@+id/accept_card_edit_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/basic_background_color"
                android:text="@string/accept_card_edit_button_title" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </RelativeLayout>

</layout>